--- a/css/article.css
+++ b/css/article.css
@@ -2,6 +2,10 @@
 	background-color: rgba(44, 62, 80, .1);
 }
 
+p {
+	font-weight: bold;
+}
+
 #submission-container {
 	margin-bottom: 25px;
 	border-bottom: 1px solid #95a5a6;
@@ -23,6 +27,24 @@
 	border: 1px solid #95a5a6;
 	background-color: #ffffff;
 	margin-bottom: 0px;
+	width: 70%;
+	display: inline-block;
+}
+
+#event-form {
+	display: inline-block;
+	position: absolute;
+	margin: 15px;
+	width: 300px;
+}
+
+#articleEvent {
+	width: 100%;
+	height: 200px;
+}
+
+#event-submit-button {
+	margin-top: 10px;
 }
 
 #timeline-header {
