--- a/css/article.css
+++ b/css/article.css
@@ -11,15 +11,24 @@ p {
 	border-bottom: 1px solid #95a5a6;
 }
 
-#reviewer-container {
+#status-container {
 	padding-bottom: 15px;
 	border-bottom: 1px solid #95A5A6;
 	margin-bottom: 25px;
 }
 
+#currentstatus-header h3 {
+	display: inline-block;
+}
+
+#status-header {
+	margin-bottom: 20px;
+}
+
 .sub-field p {
 	display: inline-block;
 	min-width: 75px;
+	margin-right: 15px;
 }
 
 
